===================================
Beetle Changelog
===================================

Version 1.0.2
-----------------------------------
[updated] flexlider to version 2.6.0

Version 1.0.1
-----------------------------------
[changed] styling of post slider
[added] new fonts and small design adjustments

Version 1.0
-----------------------------------
Final Version