@@ -4,6 +4,7 @@ Beetle Changelog
 
 Version 1.0.2
 -----------------------------------
+[added] support for new custom logo feature from WordPress 4.5
 [updated] flexlider to version 2.6.0
 
 Version 1.0.1
